Add endpoint to get the screenings for a date.
