# src/main/resources/static/api.yaml
@@ -63,6 +63,30 @@ paths:
         404:
           description: No Cinema found with the given id.
 
+  /cinemas/screening:
+    post:
+      summary: Returns the screening scheduled for a given date in a Cinema.
+      tags:
+        - cinema
+      security:
+        - bearerAuth: [ ]
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ScreeningsForDate'
+      responses:
+        200:
+          description: Success to return the Cinema.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Screening'
+        404:
+          description: No Cinema found with the given id.
+
   /cinemas/screening/schedule:
     post:
       summary: Schedules a new Screening at a Cinema.
@@ -358,6 +382,29 @@ components:
           example: 1
         date:
           description: The date when the screening will be scheduled with format 'yyyy-mm-dd'. Must be a date in the future.
+          type: string
+          format: date
+          example: '2023-12-20'
+
+    ScreeningsForDate:
+      type: object
+      required:
+        - cinema_id
+        - theater_id
+        - date
+      properties:
+        cinema_id:
+          description: The id of the cinema to replan its screenings.
+          type: integer
+          format: int64
+          example: 1
+        theater_id:
+          description: The id of the theater to replan its screenings Must belong to the given cinema.
+          type: integer
+          format: int64
+          example: 1
+        date:
+          description: The date at which the replan will occur with format 'yyyy-mm-dd'. Must be a date in the future.
           type: string
           format: date
           example: '2023-12-20'
